<resources>
    <string name="app_name">Door Dash</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="Not_Registered">Not_Registered</string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="already_registered">Already Registered?</string>
    <string name="Confirm_Password">Confirm_Password</string>
    <string name="New_User">New User?</string>
</resources>
