<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="170dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/Email"

        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etPass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <EditText
        android:id="@+id/etcnfpass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/Confirm_Password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/Signup"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"


            android:text="@string/already_registered"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>