<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmailL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="170dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"

        android:hint="@string/Email"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etPassL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/Login"
        android:textSize="25sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/New_User"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/Register"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>